Added new resources

--- a/checkout-sdk/src/main/res/drawable/checkout_ic_pending.xml
+++ b/checkout-sdk/src/main/res/drawable/checkout_ic_pending.xml
@@ -1,16 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
-    <path
-        android:pathData="M24,24m-23,0a23,23 0,1 1,46 0a23,23 0,1 1,-46 0"
-        android:fillColor="#FFCC00"/>
-    <path
-        android:pathData="M17.8,23.6h12.9"
-        android:strokeLineJoin="round"
-        android:strokeWidth="4"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#FFFFFF"
-        android:strokeLineCap="round"/>
+    android:width="86dp"
+    android:height="86dp"
+    android:viewportWidth="86"
+    android:viewportHeight="86">
+  <path
+      android:pathData="M43,43m-43,0a43,43 0,1 1,86 0a43,43 0,1 1,-86 0"
+      android:fillColor="#f7961c"/>
+  <path
+      android:pathData="M24.5,43.5L61.5,43.5"
+      android:strokeWidth="4"
+      android:fillColor="#00000000"
+      android:strokeColor="#fff"
+      android:strokeLineCap="round"/>
 </vector>
